--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -69,19 +69,8 @@ section .icon-list .iconfont {
   margin-right: 10px;
 }
 
-section .skill-bar dt {
-  margin-top: 16px;
-}
-
-section .skill-bar dd {
-  height: 3px;
-  background-color: #eaeaea;
-}
-
-section .skill-bar dd div {
-  height: 100%;
-  background-color: #66a9a3;
-  margin-top: 10px;
+section .skill-bar li {
+  margin-top: 8px;
 }
 
 section .timeline-panel {
@@ -173,7 +162,7 @@ section .education .date {
   grid-column: 1;
   margin-bottom: 10px;
 }
-section .education h3 {
+section .education .school {
   grid-row: 2;
   grid-column: 1;
   margin-bottom: 10px;
@@ -185,6 +174,12 @@ section .education .introduction {
 }
 
 .skills > .detail {
+  grid-row: 2;
+  grid-column: 1 / 4;
+  margin-left: 20px;
+}
+
+.blog > .detail {
   grid-row: 2;
   grid-column: 1 / 4;
   margin-left: 20px;
