--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -81,6 +81,14 @@ img {
     width: 100%;
   }
 
+  section .timeline-panel .detail {
+    grid-column: 1 / 5;
+  }
+
+  section .timeline-panel .detail.morney {
+    grid-column: 1 / 4;
+  }
+
   section .timeline-panel .pomodoro {
     display: flex;
     flex-direction: column;
